  [Michele Simionato]
  * Reduced memory consumption in the master node in post_risk
  * Reduced slow tasks in the ebrisk calculator and memory consumption
    in the master node

  [Paolo Tormene]
  * Fixed bug #8907: unable to run ClassicalDamage demo on Windows

  [Astha Poudel, Anirudh Rao, Paolo Tormene]
  * Updates to the infrastructure risk assessment and connectivity analysis
    module to incorporate additional performance metrics including Complete
    Connectivity Loss (CCL), Partial Connectivity Loss (PCL), Weighted
    Connectivity Loss (WCL), and Efficiency Loss (EL) based on
    Poudel et al. (2023).
  * Implemented the possibility of including both weighted and unweighted
    graphs for infrastructure risk.
  * Implemented the possibility of including simple undirected graphs, simple
    directed graphs, multigraphs and multi-directed graphs.
  * Implemented the Bradley (2012) cross-correlation equations between peak
    ground velocity (PGV), peak ground acceleration (PGA), and 5% damped
    pseudo-spectral acceleration (SA)

  [Michele Simionato]
  * Moved the generation of the hazard curves from the GMFs in post_execute
  * Fixed the error "You must supply a list of magnitudes as 2-digit strings"
    when starting from ruptures in a model with GMPETables (i.e. Canada)
  * Replaced sequential tiling with parallel tiling in large classical
    calculations
  * Huge reduction of the memory usage in the event_based calculator; also,
    reduced the slow tasks

python3-oq-engine (3.17.0-2~xenial01) xenial; urgency=low

  [Michele Simionato]
  * Raise an early error if the user disable both realizations and statistics
  * Internal: added dbserver.user in openquake.cfg
  * Solved the hanging of classical calculations due to large zmq packets
    and reduced memory occupation

  [Marco Pagani, Michele Simionato]
  * Added support for the "direct" method in MRD calculations

  [Michele Simionato]